2011-01-09  Dave Hart  <davehart@gmail.com>  (tiny change)

	Fix another typo in Rule.pm comment.
	* lib/Automake/Rule.pm: Fix typo.

2011-01-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Improve, extend and tweak tests on Texinfo support.
	* tests/instdir-texi.test: Add a call to `ls -l' after that to
	`make', for debugging.  When looking for required tools, do not
	redirect the output of "$tool --help" to /dev/null, and do not
	uselessly run it in a subshell.
	* tests/txinfo.test: Rewritten to run autoconf, ./configure and
	make.  All checks moved into Makefile.am.
	* tests/txinfo8.test: Likewise, and modernize the generated
	configure.in.
	* tests/txinfo2.test: Moved checks into Makefile.am, and other
	minor improvements.
	* tests/txinfo5.test: Enable `errexit' shell flag, and related
	changes.  Add trailing `:' command.
	* tests/txinfo6.test: Likewise, and make grepping of generated
	Makefile.in stricter.
	* tests/txinfo7.test: Enable `errexit' shell flag, and related
	changes.  Add trailing `:' command.  Do not add unnecessary stuff
	to Makefile.am.
	* tests/txinfo9.test: Verify that more targets which are expected
	to be generated only once really are.  Make grepping less strict,
	to avoid exposing too much internal details.  More minor changes.
	* tests/txinfo16.test: Add trailing `:'.  Prefer cat over echo
	for appending to configure.in.  Updated/fixed heading comments.
	* tests/txinfo23.test: Likewise, and extended a little by making
	it check that no info file is created in the $(srcdir).
	* tests/txinfo24.test: Likewise.
	* tests/txinfo25.test: Likewise.
	* tests/txinfo18.test: Add trailing `:'.  Prefer cat over echo
	for appending to configure.in.  Also, check that index files are
	cleaned also by "make clean", not only by "make distclean".
	* tests/txinfo22.test: Prefer `$me' over hard-coded test name,
	and added trailing `:' command.  This testcase also used to check
	that automake ignores in-line comments when using variables, but