@@ -16,9 +16,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # Test to make sure that texinfo.tex is not required by --cygnus.
-# Also check that TEXINFOS + cygnus work without requiring the
-# `-Wno-override' option.
-# See also sister test txinfo5b.test.
+# See also sister test txinfo5.test.
 # Report from Ian Taylor.
 
 . ./defs || Exit 1
@@ -30,6 +28,9 @@ AM_MAINTAINER_MODE
 END
 
 cat > Makefile.am << 'END'
+# Disable `override' warning to work around an unrelated
+# texi+cygnus bug.
+AUTOMAKE_OPTIONS = -Wno-override
 info_TEXINFOS = ian.texi
 END
 
@@ -37,5 +38,7 @@ echo '@setfilename ian.info' > ian.texi
 
 $ACLOCAL
 $AUTOMAKE --cygnus
+$AUTOMAKE -a --cygnus
+test ! -f texinfo.tex
 
 :
