@@ -1,3 +1,12 @@
+2011-01-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: work around a texi+cygnus bug causing a spurious XFAIL
+	* tests/txinfo5b.test: New test, like txinfo5.test but calling
+	automake with the `-Wno-override' option to work around a bug
+	in the texinfo + cygnus interaction.
+	* tests/txinfo5.test: Update heading comments.
+	* tests/Makefile.am (TEST): Updated.
+
 2011-01-09  Dave Hart  <davehart@gmail.com>  (tiny change)
 
 	Fix another typo in Rule.pm comment.
